--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,12 @@
         <url>https://github.com/stueberm1/riskmanager</url>
     </scm>
     <properties>
-        <java.version>25</java.version>
+        <java.version>21</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
         <arch-unit.version>1.4.1</arch-unit.version>
     </properties>
     <modules>
+        <module>risk-manager-types</module>
         <module>risk-manager-core</module>
         <module>risk-manager-main</module>
     </modules>
@@ -55,6 +56,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.12.0</version>
                     <configuration>
                         <source>${java.version}</source>
                         <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
@@ -70,19 +72,13 @@
                             --attribute "version=${project.version}"
                         </additionalparam>
                         <additionalJOptions>
-                            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-                            </additionalJOption>
-                            <additionalJOption>-Xdoclint:all,-html,-accessibility</additionalJOption>
+                            <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</additionalJOption>
+                            <additionalJOption>-Xdoclint:all,-html,-accessibility,-missing</additionalJOption>
                         </additionalJOptions>
                     </configuration>
                 </plugin>
