--- a/risk-manager-core/pom.xml
+++ b/risk-manager-core/pom.xml
@@ -12,8 +12,17 @@
     <description>A tool to track and assess risks</description>
     <dependencies>
         <dependency>
+            <groupId>com.github.stueberm1.riskmanager</groupId>
+            <artifactId>risk-manager-types</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
